# raytracer

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  geometry.rs  main.rs
src/material/: light.rs  mod.rs
